Removing Boost linking dependencies from the library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,17 @@
 cmake_minimum_required(VERSION 2.6)
 
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
+add_library(bson 
+	src/bsonobj.cpp
+	src/oid.cpp
+	lib/base64.cpp
+	lib/md5.c
+	lib/nonce.cpp
+)
+
+
 # Play with the following defines
 # Disable auto-linking. 
 add_definitions( -DBOOST_ALL_NO_LIB )
@@ -11,17 +23,6 @@ set( Boost_USE_STATIC_LIBS ON )
 find_package( Boost REQUIRED COMPONENTS thread system)
 
 include_directories( ${Boost_INCLUDE_DIRS} )
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-
-add_library(bson 
-	src/bsonobj.cpp
-	src/oid.cpp
-	lib/base64.cpp
-	lib/md5.c
-	lib/nonce.cpp
-)
-
-target_link_libraries(bson ${Boost_LIBRARIES} )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 add_executable(bson_test 
@@ -29,4 +30,4 @@ add_executable(bson_test
 	test/test_bsonobj.cpp
 	test/json.cpp
 )
-target_link_libraries(bson_test bson)
+target_link_libraries(bson_test bson ${Boost_LIBRARIES})
