Attempt for gnu support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,12 @@ set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
 set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-#find_package( Boost REQUIRED COMPONENTS system)
 
-#include_directories( ${Boost_INCLUDE_DIRS} )
+if (CMAKE_COMPILER_IS_GNUCXX)
+  set ( CMAKE_CXX_FLAGS "-std=c++0x")
+  #set ( CMAKE_CXX_FLAGS_DEBUG "")
+  #set ( CMAKE_CXX_FLAGS_RELEASE  "" )
+endif ()
 
 add_library(bsoncpp SHARED
 	src/bsonobj.cpp
@@ -33,25 +36,3 @@ add_library(bsoncpp SHARED
 	src/util/builder.h
 	src/util/embedded_builder.h
 )
-
-# Disabling the test application for now, incompatibility because of json's req for
-# boost thread.
-# Play with the following defines
-# Disable auto-linking. 
-#add_definitions( -DBOOST_ALL_NO_LIB )
-# In case of a Shared Boost install (dlls), you should then enable this
-# add_definitions( -DBOOST_ALL_DYN_LINK )
-
-# Explicitly tell find-package to search for Static Boost libs (if needed)
-#set( Boost_USE_STATIC_LIBS ON ) 
-#find_package( Boost REQUIRED COMPONENTS system)
-
-#include_directories( ${Boost_INCLUDE_DIRS} )
-
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
-#add_executable(bson_test 
-#	test/framework.cpp 
-#	test/test_bsonobj.cpp
-#	test/json.cpp
-#)
-#target_link_libraries(bson_test bsoncpp ${Boost_LIBRARIES})
