further attempts at gnu support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 
-if (CMAKE_COMPILER_IS_GNUCXX)
+if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_GNUCC)
   set ( CMAKE_CXX_FLAGS "-std=c++0x")
   #set ( CMAKE_CXX_FLAGS_DEBUG "")
   #set ( CMAKE_CXX_FLAGS_RELEASE  "" )
